2010-04-12  Andrew Overholt  <overholt@redhat.com>

	* feature.properties: Match consistent license text (bug #306627).

2009-08-11  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Bump version to 0.3.0.

2009-07-30  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Recomputed dependencies.

2009-05-28  Elliott Baron  <ebaron@redhat.com>

	* feature.properties: Fix featureProvider key.

2009-05-20  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Remove '.feature' from feature ID.
	
2009-05-19  Andrew Overholt  <overholt@redhat.com>

	* feature.properties: Change provider from Eclipse.org to Eclipse.

2009-04-03  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: 0.2.0 version.

2009-03-13  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Unpack cachegrind tests plugin so test.xml is present. 

2009-03-13  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Add cachegrind tests plugin.

2009-02-12  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Update dependencies, org.junit.

2008-12-17  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Add tests plugin.

2008-12-16  Elliott Baron  <ebaron@redhat.com>

	* feature.xml: Added dependencies and Linux requirement. Added massif tests.

2008-12-11  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Unpack memcheck.tests plugin after installation.

2008-12-10  Andrew Overholt  <overholt@redhat.com>

	* build.properties: Inital checkin.
	* feature.xml: Likewise.
	* feature.properties: Likewise.
	* epl-v10.html: Likewise.