@@ -1,4 +1,5 @@
 bin.includes = feature.xml,\
                feature.properties,\
                epl-v10.html,\
-               test.xml
+               test.xml,\
+               license.html
